2001-06-09  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	Ignore generates files all around the place.

2001-04-19  Christopher R. Gabriel  <cgabriel@softwarelibero.org>

	* glines/help/it/: added italian documentation from Fabrizio
	Stefani <f.stef@inwind.it>
	* gnome-stones/help/it/: Likewise
	* mahjongg/help/it: Likewise
	* aisleriot/docs/it: Likewise
	
2001-03-28  Dan Mueth  <dan@eazel.com>

	Changed from <book> to <article> and fixed build problem.

	* same-gnome/help/ru/same-gnome.sgml:

2001-03-27  Dan Mueth  <dan@eazel.com>

	Setting up installation of GNOME Mines docs and link
	it to app. Also adding OMF metadata.

	* configure.in:
	* gnomine/Makefile.am:
	* gnomine/gnomine.c: (help_cb), (preferences_callback):
	* gnomine/help/C/Makefile.am:
	* gnomine/help/C/gnome-mines-C.omf:
	* gnomine/help/C/topic.dat:
	* gnomine/help/Makefile.am:

	There was a bug here - it was missing "help" as a SUBDIR

	* gnome-stones/Makefile.am:

2001-03-24  Dan Mueth  <dan@eazel.com>

	Added Gnotravex documentation.

	* configure.in:
	* gnotravex/Makefile.am:
	* gnotravex/help/C/Makefile.am:
	* gnotravex/help/C/figures/gnotravex_game.png:
	* gnotravex/help/C/figures/gnotravex_mainwindow.png:
	* gnotravex/help/C/gnotravex-C.omf:
	* gnotravex/help/C/gnotravex.sgml:
	* gnotravex/help/C/topic.dat:
	* gnotravex/help/Makefile.am:

2001-03-20  Dan Mueth  <dan@eazel.com>

	Small fixes to match that the figure was moved
	into the figures/ directory.

	* gnobots2/help/C/Makefile.am:
	* gnobots2/help/C/gnobots2.sgml:

2001-03-13  Dan Mueth  <dan@eazel.com>

	Fixed incorrect language code:
	* same-gnome/help/ru/same-gnome-ru.omf:

2001-03-13  Dan Mueth  <dan@eazel.com>

	Removed lethal space at end of line.

	* aisleriot/docs/C/Makefile.am:
	* glines/help/C/Makefile.am:
	* gtali/help/C/Makefile.am:

2001-03-13  Dan Mueth  <dan@eazel.com>

	Removed lethal space at end of line.

	* gnibbles/help/C/Makefile.am:

2001-03-13  Dan Mueth  <dan@eazel.com>
