@@ -1,7 +1,7 @@
 AC_INIT(gnomine)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gnome-games, 1.3.90)
+AM_INIT_AUTOMAKE(gnome-games, 1.4.0.2)
 AM_MAINTAINER_MODE
 AM_ACLOCAL_INCLUDE(macros)
 GNOME_INIT
