@@ -1,3 +1,8 @@
+2001-06-24  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
+	* gnome-games.spec.in: Fixes from Dean Scott <drscott@rochester.rr.com>
+	* configure.in: Bump version to 1.4.0.2, so rpms don't get confused.
+
 2001-06-09  Juan Pablo Mendoza <pablo_juan@yahoo.com>
 
 	Ignore generates files all around the place.
